# katas

./: HTML  README.md  emacs_tips.html  emacs_tips.md
args/: args.md  args.rkt  args2.rkt
chat/: chat.go  chat_test.go
codebreaker/: CodeBreaker.hi  CodeBreaker.hs  CodeBreakerTests.hi  CodeBreakerTests.hs  LICENSE  Makefile  codebreaker.cabal
codebreaker/src/: CodeBreakerTests.hs  Main.hs
fizzbuzz/: fizzbuzz.hs
fizzbuzz/FizzBuzz/: build.fan  fizzbuzz_fantom.md
fizzbuzz/FizzBuzz/fan/: FizzBuzz.fan
fizzbuzz/FizzBuzz/test/: FizzBuzzTest.fan
flavius_josephe/: flavius.rkt
palindrome/: palindrome.hs  palindrome.rkt
string-calculator/: sc.html  string-calculator.md  string-calculator.scm
sum-of/: sum-of.hs  sum-of.md  sum-of.rkt  sum-of.scm
